<resources>
    <string name="app_name">chat_app</string>
    <string name="login_title">Bienvenue !</string>

    <string name="hint_email">Adresse E-mail</string>
    <string name="hint_password">Mot de passe</string>

    <string name="button_login">Se Connecter</string>
    <string name="link_register">Pas encore de compte ? S\'inscrire</string>

    <string name="button_create_account">Creer mon compte</string>
    <string name="hint_nometprenom">Nom et Prenom</string>
    <string name="hint_pseudo">Pseudo</string>
    <string name="modifier_l_image">Modifier l\'image</string>
</resources>